# nba_v2

./: .gitignore  CLAUDE.md  CLAUDE_OPUS_REVIEW.md  CODEX_DEEP_REVIEW_PLAN.md  FINAL_CHANGE_PLAN.md  SPECIAL_WEIGHTS_LOSS90_RUN.json  STATIC_ERROR_AUDIT.md  UNIFIED_IMPROVEMENT_PLAN.md  UNIFIED_REVIEW_CHANGE_PLAN.md  desktop.py  discover_endpoints_lightpanda.bat  discover_endpoints_lightpanda.ps1  gunicorn.conf.py  nba_widget.sh  overnight.py  overnight_control_center.py  pyproject.toml  requirements.txt  run_termux.sh  setup_lightpanda.bat  setup_lightpanda_wsl.bat  setup_termux.sh  start_lightpanda.bat  stop_lightpanda.bat  sync_odds.bat  wait_40m_and_push.bat  web.py  weekly_retrain_report.bat  weekly_retrain_report.py
.claude/: settings.local.json
data/: app_settings.json  nba_analytics.db-shm  nba_analytics.db-wal  optuna_studies.db-journal  pipeline_state.json  score_calibration.json  stage_champion_bank.json
src/: __init__.py  bootstrap.py  config.py
tests/: conftest.py  test_alert_rules.py  test_backtester_upset_logic.py  test_cache_invalidation_imports.py  test_cache_registry_precompute_policy.py  test_config_settings_sync.py  test_db_execute_returning_id.py  test_drift_monitor.py  test_elo_math.py  test_http_client.py  test_injury_monitor.py  test_interaction_model.py  test_matchup_cache.py  test_matchup_sharp_resolver.py  test_migrations_team_id_backfill.py  test_nba_fetcher_rate_limit.py  test_notification_service.py  test_odds_monitor.py  test_optimizer_blocked_pathways.py  test_optimizer_rolling_cv_and_ml_gate.py  test_optimizer_upset_push_parity.py  (+17 more)
(+121 files in other folders)
